--- a/tratamento_dados.ipynb
+++ b/tratamento_dados.ipynb
@@ -9,7 +9,7 @@
     "import pandas as pd\n",
     "\n",
     "with open('resultados.txt', 'r') as f:\n",
-    "    resultados = f.readlines()\n"
+    "    resultados = f.readlines()"
    ]
   },
   {
@@ -43,6 +43,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('sentences_trated.pkl', 'wb') as file:\n",
+    "    pickle.dump(num_try, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -55,9 +67,7 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "table_df.fillna(0, inplace=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -659,6 +669,8 @@
     }
    ],
    "source": [
+    "table_df = pd.DataFrame(columns=[n for n in range(1, 16)], index=[n for n in range(1, 28)])\n",
+    "table_df.fillna(0, inplace=True)\n",
     "table_df = pd.DataFrame(columns=[f\"ctx_{n}\" for n in range(1, 16)], index=[f\"g_{n}\" for n in range(1, 28)])\n",
     "table_df.fillna(0, inplace=True)\n",
     "\n",
@@ -668,6 +680,15 @@
     "        table_df.iloc[num_try[i][j] - 1, j] += 1\n",
     "\n",
     "table_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_df.to_csv(\"tabela.csv\", index=False)"
    ]
   },
   {
@@ -694,7 +715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
