Versao final para entrega

--- a/gerador_frases.ipynb
+++ b/gerador_frases.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notebook dedicado a geração das frases de tamanho 15"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bibliotecas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -31,11 +45,8 @@
    "outputs": [],
    "source": [
     "def tratar_string(string):\n",
-    "    # Remove acentos das letras\n",
     "    string_sem_acentos = unidecode(string)\n",
-    "    # Substitui todos os caracteres não desejados por espaços em branco\n",
     "    string_tratada = re.sub(r'[^a-zA-Z\\.\\s]', '', string_sem_acentos)\n",
-    "    # Remove espaços extras e converte para minúsculas\n",
     "    string_tratada = ' '.join(string_tratada.split()).lower()\n",
     "    return string_tratada"
    ]
@@ -98,6 +109,13 @@
     "n = len(frases_tratadas)\n",
     "indices = list(range(n))\n",
     "random.shuffle(indices)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Selecionando 100 frases de tamanho 15 de forma aleatória"
    ]
   },
   {
